<resources>
    <string name="app_name">SWA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="arrow_up">&#8593;</string>
    <string name="arrow_down">&#8595;</string>
    <string name="today">Hôm nay</string>
    <string name="sevendays">7 ngày</string>
    <string name="degreeC">&#8451;</string>
    <string name="degree">&#176;</string>
    <string name="humidity">Độ ẩm</string>
    <string name="wind_speed">Tốc độ gió</string>
    <string name="pressure">Áp suất</string>
    <string name="cloud_cover">Mây che phủ</string>
    <string name="ozone">Ozone</string>
    <string name="uv">UV</string>
    <string name="current">Hiện tại</string>
</resources>
